methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:29: error: not found: value color
  val y=color.yellow
        ^MethodsPicture:30: error: not found: value color
  val r=color.red
        ^MethodsPicture:31: error: not found: value color
  val b=color.blue
        ^MethodsPicture:32: error: not found: value color
  val g=color.green
        ^